# Q4-Hackathon02-Phase05-ToDo-Dapr-Cloud-Deployment-Public

./: .env.example  .gitignore  CLAUDE.md  README.md
.claude/agents/: advanced-features-implementer.md  auth-integration-designer.md  cicd-pipeline-agent.md  dapr-integration-agent.md  github-deployer-agent.md  intent-analyzer.md  iteration-controller.md  kafka-event-architect.md  kubernetes-deployer.md  mcp-tool-executor.md  microservice-builder.md  monitoring-observability-agent.md  qa-review-agent.md  response-composer.md  spec-architect-agent.md  sqlmodel-schema-designer.md  todo-app-implementer.md  todo-orchestrator.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/migrations/: 001_create_tasks_table.sql  002_phase5_advanced_features.sql  002_phase5_advanced_features_rollback.sql
backend/src/: __init__.py  config.py  main.py
backend/src/api/: __init__.py  deps.py  health.py  routes.py  tasks.py
backend/src/db/: __init__.py  session.py
backend/src/events/: __init__.py  publisher.py
backend/src/middleware/: __init__.py  auth.py  cors.py  rate_limit.py
backend/src/models/: __init__.py  task.py
backend/src/schemas/: __init__.py  error.py
backend/src/services/: __init__.py  task_service.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_tasks.py
docs/: CREDENTIALS-GUIDE.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: error.tsx  (+4 more)
todo-ai-chatbot/: Chart.yaml  values.yaml
(+190 files in other folders)
